--- a/portfolio.html
+++ b/portfolio.html
@@ -196,7 +196,7 @@
       </section>
     </main>
     <footer class="footer">
-      <div class="container">
+      <div class="container footer">
         <div class="footer-container">
           <a href="./index.html" class="logo-footer"
             ><span class="logo-blue">WEB</span>STUDIO</a
@@ -205,6 +205,39 @@
             Increase the flow of customers and sales for your business with
             digital marketing & growth solutions.
           </p>
+        </div>
+        <div class="footer-social-media">
+          <p class="footer-social-text">Social media</p>
+          <ul class="footer-social-list">
+            <li class="footer-social-item">
+              <a href="#" class="footer-social-link">
+                <svg class="footer-social-icon">
+                  <use href="./images/icons.svg#icon-instagram"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="footer-social-item">
+              <a href="#" class="footer-social-link">
+                <svg class="footer-social-icon">
+                  <use href="./images/icons.svg#icon-twitter"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="footer-social-item">
+              <a href="#" class="footer-social-link">
+                <svg class="footer-social-icon">
+                  <use href="./images/icons.svg#icon-facebook"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="footer-social-item">
+              <a href="#" class="footer-social-link">
+                <svg class="footer-social-icon">
+                  <use href="./images/icons.svg#icon-linkedin"></use>
+                </svg>
+              </a>
+            </li>
+          </ul>
         </div>
       </div>
     </footer>
