--- a/portfolio.html
+++ b/portfolio.html
@@ -29,7 +29,7 @@
               <a href="./index.html" class="link">Studio</a>
             </li>
             <li class="link-item">
-              <a href="./portfolio.html" class="link">Portfolio</a>
+              <a href="./portfolio.html" class="link current-page">Portfolio</a>
             </li>
             <li class="link-item"><a href="" class="link">Contacts</a></li>
           </ul>
@@ -78,16 +78,26 @@
 
           <ul class="page-box">
             <li class="portfolio-item">
+              <a href="#" class="portfolio-link">
+                <div class="portfolio-card">
               <img
                 src="./images/apps.jpg"
                 alt="apps"
                 width="360"
                 height="300"
               />
+              <div class="portfolio-overlay">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                Beatae fugiat facere voluptate accusamus ea qui eius
+                consectetur itaque, impedit libero laborum incidunt possimus
+                dolores reprehenderit fuga odit totam, rem error.
+              </div>
+             </div>
               <div class="portfolio-caption">
                 <h2 class="main-title">Banking App Interface Concept</h2>
                 <p class="main-text">App</p>
               </div>
+              </a>
             </li>
             <li class="portfolio-item">
               <img
@@ -241,6 +251,5 @@
         </div>
       </div>
     </footer>
-    <script src="./js/modal.js"></script>
   </body>
 </html>
