--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     />
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
-
+  
   <body>
     <header class="page-header">
       <div class="container header-div">
@@ -27,7 +27,7 @@
           >
           <ul class="link-list">
             <li class="link-item">
-              <a href="./index.html" class="link">Studio</a>
+              <a href="./index.html" class="link current-page">Studio</a>
             </li>
             <li class="link-item">
               <a href="./portfolio.html" class="link">Portfolio</a>
@@ -56,7 +56,7 @@
       <section class="hero">
         <div class="container-hero">
           <h1 class="hero-title">Effective Solutions for Your Business</h1>
-          <button type="button" class="btn">Order Service</button>
+          <button type="button" class="btn" data-modal-open>Order Service</button>
         </div>
       </section>
       <!--Section 1-->
@@ -364,6 +364,14 @@
         </div>
       </div>
     </footer>
+    <div class="is-hidden modal" data-modal>
+      <div class="modal-form">
+        <div class="modal-close" data-modal-close>
+          <svg class="modal-svg" width="24" height="24">
+            <use href="./images/icons.svg#icon-Vector-1"></use>
+          </svg>
+        </div>
+      </div>
     <script src="./js/modal.js"></script>
   </body>
 </html>
