--- a/portfolio.html
+++ b/portfolio.html
@@ -100,24 +100,42 @@
               </a>
             </li>
             <li class="portfolio-item">
+              <a href="#" class="portfolio-link">
+                <div class="portfolio-card">
               <img
                 src="./images/phone1.jpg"
                 alt="phone"
                 width="360"
                 height="300"
               />
+              <div class="portfolio-overlay">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                Beatae fugiat facere voluptate accusamus ea qui eius
+                consectetur itaque, impedit libero laborum incidunt possimus
+                dolores reprehenderit fuga odit totam, rem error.
+              </div>
+                </div>
               <div class="portfolio-caption">
                 <h2 class="main-title">Cashless Payment</h2>
                 <p class="main-text">Marketing</p>
               </div>
             </li>
             <li class="portfolio-item">
+              <a href="#" class="portfolio-link">
+                <div class="portfolio-card">
               <img
                 src="./images/laptop.jpg"
                 alt="laptop"
                 width="360"
                 height="300"
               />
+              <div class="portfolio-overlay">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                Beatae fugiat facere voluptate accusamus ea qui eius
+                consectetur itaque, impedit libero laborum incidunt possimus
+                dolores reprehenderit fuga odit totam, rem error.
+              </div>
+                </div>
               <div class="portfolio-caption">
                 <h2 class="main-title">Meditaion App</h2>
                 <p class="main-text">App</p>
@@ -127,36 +145,63 @@
             <!--Row 2-->
 
             <li class="portfolio-item">
+              <a href="#" class="portfolio-link">
+                <div class="portfolio-card">
               <img
                 src="./images/taxi-driver.jpg"
                 alt="taxi-driver"
                 width="360"
                 height="300"
               />
+              <div class="portfolio-overlay">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                Beatae fugiat facere voluptate accusamus ea qui eius
+                consectetur itaque, impedit libero laborum incidunt possimus
+                dolores reprehenderit fuga odit totam, rem error.
+              </div>
+                </div>
               <div class="portfolio-caption">
                 <h2 class="main-title">Taxi Service</h2>
                 <p class="main-text">Marketing</p>
               </div>
             </li>
             <li class="portfolio-item">
+              <a href="#" class="portfolio-link">
+                <div class="portfolio-card">
               <img
                 src="./images/screens.jpg"
                 alt="screen"
                 width="360"
                 height="300"
               />
+              <div class="portfolio-overlay">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                Beatae fugiat facere voluptate accusamus ea qui eius
+                consectetur itaque, impedit libero laborum incidunt possimus
+                dolores reprehenderit fuga odit totam, rem error.
+              </div>
+                </div>
               <div class="portfolio-caption">
                 <h2 class="main-title">Screen Illustrations</h2>
                 <p class="main-text">Design</p>
               </div>
             </li>
             <li class="portfolio-item">
+              <a href="#" class="portfolio-link">
+                <div class="portfolio-card">
               <img
                 src="./images/girl.jpg"
                 alt="girl"
                 width="360"
                 height="300"
               />
+              <div class="portfolio-overlay">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                Beatae fugiat facere voluptate accusamus ea qui eius
+                consectetur itaque, impedit libero laborum incidunt possimus
+                dolores reprehenderit fuga odit totam, rem error.
+              </div>
+                </div>
               <div class="portfolio-caption">
                 <h2 class="main-title">Online Courses</h2>
                 <p class="main-text">Marketing</p>
@@ -166,36 +211,63 @@
             <!--Row 3-->
 
             <li class="portfolio-item">
+              <a href="#" class="portfolio-link">
+                <div class="portfolio-card">
               <img
                 src="./images/stories.jpg"
                 alt="stories"
                 width="360"
                 height="300"
               />
+              <div class="portfolio-overlay">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                Beatae fugiat facere voluptate accusamus ea qui eius
+                consectetur itaque, impedit libero laborum incidunt possimus
+                dolores reprehenderit fuga odit totam, rem error.
+              </div>
+                </div>
               <div class="portfolio-caption">
                 <h2 class="main-title">Instagram Stories Concept</h2>
                 <p class="main-text">Design</p>
               </div>
             </li>
             <li class="portfolio-item">
+              <a href="#" class="portfolio-link">
+                <div class="portfolio-card">
               <img
                 src="./images/food.jpg"
                 alt="food"
                 width="360"
                 height="300"
               />
+              <div class="portfolio-overlay">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                Beatae fugiat facere voluptate accusamus ea qui eius
+                consectetur itaque, impedit libero laborum incidunt possimus
+                dolores reprehenderit fuga odit totam, rem error.
+              </div>
+                </div>
               <div class="portfolio-caption">
                 <h2 class="main-title">Organic Food</h2>
                 <p class="main-text">Web Site</p>
               </div>
             </li>
             <li class="portfolio-item">
+              <a href="#" class="portfolio-link">
+                <div class="portfolio-card">
               <img
                 src="./images/coffee.jpg"
                 alt="coffee"
                 width="360"
                 height="300"
               />
+              <div class="portfolio-overlay">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                Beatae fugiat facere voluptate accusamus ea qui eius
+                consectetur itaque, impedit libero laborum incidunt possimus
+                dolores reprehenderit fuga odit totam, rem error.
+              </div>
+                </div>
               <div class="portfolio-caption">
                 <h2 class="main-title">Fresh Coffee</h2>
                 <p class="main-text">Web Site</p>
