--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     />
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
-  
+
   <body>
     <header class="page-header">
       <div class="container header-div">
@@ -56,7 +56,9 @@
       <section class="hero">
         <div class="container-hero">
           <h1 class="hero-title">Effective Solutions for Your Business</h1>
-          <button type="button" class="btn" data-modal-open>Order Service</button>
+          <button type="button" class="btn" data-modal-open>
+            Order Service
+          </button>
         </div>
       </section>
       <!--Section 1-->
